samples/errors/types/assign_variable_bis.lif
let foo: Int = 1;
foo = "Bar";
